--- a/package.json
+++ b/package.json
@@ -12,7 +12,8 @@
     "pinia": "^2.1.4",
     "postcss": "^8.4.24",
     "vue": "^3.2.47",
-    "vue-router": "^4.2.2"
+    "vue-router": "^4.2.2",
+    "xlsx": "^0.18.5"
   },
   "devDependencies": {
     "@vitejs/plugin-vue": "^4.1.0",
